--- a/pom.xml
+++ b/pom.xml
@@ -96,11 +96,13 @@
     <artifactId>commons-io</artifactId>
     <version>2.5</version>
 </dependency>
-<dependency>
+
+ <dependency>
    <groupId>org.json</groupId>
    <artifactId>json</artifactId>
    <version>20080701</version>
-</dependency>
+</dependency> 
+
 <dependency>
     <groupId>org.glassfish.web</groupId>
     <artifactId>jakarta.servlet.jsp.jstl</artifactId>
@@ -123,6 +125,14 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-mail</artifactId>
       </dependency>
+      
+      <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-orm</artifactId>
+    <version>4.0.3.RELEASE</version>
+</dependency>
+      
  
 		
 	</dependencies>
